2010-01-12  Jan Djärv  <jan.h.d@swipnet.se>

	* keyboard.c (read_char): Return after executing from special map.

2010-01-12  Glenn Morris  <rgm@gnu.org>

	* emacs.c (REPORT_EMACS_BUG_PRETEST_ADDRESS): Set it to
	bug-gnu-emacs rather than emacs-pretest-bug.

2010-01-11  Chong Yidong  <cyd@stupidchicken.com>

	* nsterm.m (syms_of_nsterm): Initialize Qcontrol etc. before
	initializing the Lisp variables that depend on them.

2010-01-11  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* xfns.c (x_set_menu_bar_lines) [!USE_X_TOOLKIT && !USE_GTK]:
	Clear areas that will not be updated after change of menu bar lines.
	Clear the menu bar window's current matrix when the window gets empty.

2010-01-09  Chong Yidong  <cyd@stupidchicken.com>

	* intervals.h, textprop.c (extend_property_ranges): Return value
	and args changed.  Discard properties that begin at or after the
	new end (Bug#5306).

	* editfns.c (Fformat): Caller changed.

	* nsterm.m (ns_set_default_prefs): Delete function.
	(syms_of_nsterm): Initialize ns_command_modifier,
	ns_control_modifier, ns_function_modifier, ns_antialias_text, and
	ns_antialias_threshold here, not in ns_term_init (Bug#4113).

	* xdisp.c (pos_visible_p): Check for invisible text at the correct
	position (Bug#4040).

2010-01-09  Eli Zaretskii  <eliz@gnu.org>

	* editfns.c (Ffloat_time): Doc fix.

2010-01-09  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (Fx_create_frame): Don't create frame larger than display
	by default bug#3643.

2010-01-09  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>

	* frame.h (FRAME_TOP_MARGIN_HEIGHT): New macro.
	(FRAME_LINE_TO_PIXEL_Y, FRAME_PIXEL_Y_TO_LINE): Take account of pseudo
	windows above internal border.

	* window.h (WINDOW_MENU_BAR_P, WINDOW_TOOL_BAR_P): New macros.
	(WINDOW_TOP_EDGE_Y, WINDOW_BOTTOM_EDGE_Y): Take account of pseudo
	windows above internal border.

	* xdisp.c (get_glyph_string_clip_rects, init_glyph_string): Don't treat
	tool bar windows specially.
