@@ -1,3 +1,8 @@
+2010-01-12  YAMAMOTO Mitsuharu  <mituharu@math.s.chiba-u.ac.jp>
+
+	* keyboard.c (read_char): Don't apply previous change when current
+	buffer is unchanged by command execution.
+
 2010-01-12  Jan Djärv  <jan.h.d@swipnet.se>
 
 	* keyboard.c (read_char): Return after executing from special map.
